# Realtime-Interactive-Avatar

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  readme.md  requirements.txt
frontend/templates/: index.html
heygen_routes/: routes.py
services/: __init__.py  instruction.py
templates/: index.html
